sumo/tests/sumo/extended/emitter/errors/vtypedist/empty_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'id' in definition of emitter/vtypedistelem 'emitter' is empty.
Quitting (on error).
